add all product style

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>
     <link rel="stylesheet" href="/style.css" />
     <!-- <link href="https://fonts.googleapis.com/css?family=Space+Mono|Work+Sans" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=ABeeZee|Alegreya|Amaranth|Bree+Serif|Kreon|Nunito|Roboto+Slab|Slabo+27px" rel="stylesheet">
+
     <script defer src="/bundle.js"></script>
   </head>
   <body>
